add login form for admin

--- a/views/login.html
+++ b/views/login.html
@@ -1,10 +1,13 @@
 <html>
     <head>
         <title>{{title}}</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.23/css/uikit.min.css" />
+        <!-- UIkit JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.23/js/uikit.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.23/js/uikit-icons.min.js"></script>
     </head>
 </html>
 <body>
-    Unauthorized
     <form action='/auth' method="post">
         <input type="password" name="password" style="
             border: none;
