HTML Admin & Superadmin

--- a/views/login-superadmin.html
+++ b/views/login-superadmin.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Login Admin</title>
+        <title>Login Superadmin</title>
         <!-- UIkit CSS -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.23/css/uikit.min.css" />
         <link rel="stylesheet" href="../public/stylesheets/dr-styles.css">
@@ -14,16 +14,28 @@
     </head>
     <body uk-height-viewport>
         <div class="uk-section-default" style="height: 35%; background: inherit"></div>
-        <div class="uk-section-default uk-flex uk-flex-right uk-flex-middle" style="height: 50%; background: inherit;">
+        <div class="uk-section-default uk-flex uk-flex-right uk-flex-middle" style="height: 65%; background: inherit;">
             <div style="margin-right: 220px">
                 <form>
                     <div class="uk-margin uk-flex uk-flex-center">
-                        <h3 style="font-family: 'Quicksand', sans-serif;">Admin</h3>
+                        <h3 style="font-family: 'Quicksand', sans-serif;">Superadmin</h3>
                     </div>
                     <div class="uk-margin">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: user"></span>
                             <input class="uk-input dr-input" type="text" placeholder="Username">
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <div class="uk-inline">
+                            <span class="uk-form-icon" uk-icon="icon: lock"></span>
+                            <input class="uk-input dr-input" type="text" placeholder="Password">
+                        </div>
+                    </div>
+                    <div class="uk-margin">
+                        <div class="uk-inline">
+                            <span class="uk-form-icon" uk-icon="icon: lock"></span>
+                            <input class="uk-input dr-input" type="text" placeholder="Password">
                         </div>
                     </div>
                     <div class="uk-margin">
