--- a/views/input.html
+++ b/views/input.html
@@ -12,7 +12,7 @@
                               <label for="nim">NIM (5 digit):</label>
                               <input type="number" min="10000" max="99999" class="form-control" name="nim" id="nim">
                           </div>
-                          <button form="form1" type="submit" class="btn btn-default">Submit</button>
+                          <button id="submit" form="form1" type="submit" class="btn btn-default">Submit</button>
                       </form>
                     </div>
                     <div class="col-md-6">
@@ -67,6 +67,9 @@
                           if(rowCount > 4){
                             $('#myTable tr:last').remove();
                           }
+                          $.('#submit').on('click', function() {
+                            location.reload();
+                          })
                         }
                         else{
                           alert(res.message);
