--- a/views/input.html
+++ b/views/input.html
@@ -67,9 +67,10 @@
                           if(rowCount > 4){
                             $('#myTable tr:last').remove();
                           }
+                          location.reload();
                         }
                         else{
-                          alert(res.message);
+                          alert("Sudah memilih");
                         }
                       }
                     });
