--- a/views/partials/sidepanel.html
+++ b/views/partials/sidepanel.html
@@ -17,6 +17,18 @@
                 </li>
 
                 <li>
+                    <a href="/admin">
+                    <i class="fa fa-user-plus fa-lg"></i> Input Data Admin
+                    </a>
+                </li>
+                
+                <li>
+                    <a href="/superadmin">
+                    <i class="fa fa-user-plus fa-lg"></i> Input Data SuperAdmin
+                    </a>
+                  </li>
+
+                <li>
                   <a href="/lihat">
                   <i class="fa fa-users fa-lg"></i> Daftar Pemilih
                   </a>
