--- a/views/login-superadmin.html
+++ b/views/login-superadmin.html
@@ -13,10 +13,10 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-rc.23/js/uikit-icons.min.js"></script>
     </head>
     <body uk-height-viewport>
-        <div class="uk-section-default" style="height: 35%; background: inherit"></div>
-        <div class="uk-section-default uk-flex uk-flex-right uk-flex-middle" style="height: 65%; background: inherit;">
+        <div class="uk-section-default" style="height: 15%; background: inherit;"></div>
+        <div class="uk-section-default uk-flex uk-flex-left uk-flex-middle" style="height: 50%; background: inherit; margin-left: 110px">
             <div style="margin-right: 220px">
-                <form>
+                <form id="form1" method="POST" action="/superlogin">
                     <div class="uk-margin uk-flex uk-flex-center">
                         <h3 style="font-family: 'Quicksand', sans-serif;">Superadmin</h3>
                     </div>
@@ -29,24 +29,43 @@
                     <div class="uk-margin">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                            <input class="uk-input dr-input" type="text" placeholder="Password">
+                            <input class="uk-input dr-input" type="password" placeholder="Password 1" id="password1" name="password1">
                         </div>
                     </div>
                     <div class="uk-margin">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                            <input class="uk-input dr-input" type="text" placeholder="Password">
+                            <input class="uk-input dr-input" type="password" placeholder="Password 2" id="password2" name="password2">
                         </div>
                     </div>
                     <div class="uk-margin">
                         <div class="uk-inline">
                             <span class="uk-form-icon" uk-icon="icon: lock"></span>
-                            <input class="uk-input dr-input" type="text" placeholder="Password">
+                            <input class="uk-input dr-input" type="password" placeholder="Password 3" id="password3" name="password3">
                         </div>
                     </div>
                     <button id="login" class="uk-button dr-button" type="submit" name="submit"><b>LOG IN</b></button>
                 </form>
             </div>
         </div>
+		    <!-- <script>
+              $('#form1').on('submit', function (e) {
+                    e.preventDefault();
+                    $.ajax({
+                      type: 'POST',
+                      url: '/login-superadmin',
+                      data: $('#form1').serialize(),
+                      success: function (res) {
+                        if(res.status == 200){
+                          alert('Sukses');
+                          location.reload();
+                        }
+                        else{
+                          alert("Error");
+                        }
+                      }
+                    });
+              });
+            </script> -->
     </body>
 </html>
