--- a/views/login-admin.html
+++ b/views/login-admin.html
@@ -16,7 +16,7 @@
         <div class="uk-section-default" style="height: 35%; background: inherit"></div>
         <div class="uk-section-default uk-flex uk-flex-right uk-flex-middle" style="height: 50%; background: inherit;">
             <div style="margin-right: 220px">
-                <form>
+                <form action="/auth" method="POST">
                     <div class="uk-margin uk-flex uk-flex-center">
                         <h3 style="font-family: 'Quicksand', sans-serif;">Admin</h3>
                     </div>
@@ -36,5 +36,7 @@
                 </form>
             </div>
         </div>
+        <script>
+        </script>
     </body>
 </html>
