--- a/views/admin.html
+++ b/views/admin.html
@@ -16,7 +16,7 @@
                             <label for="password">Password:</label>
                             <input type="password" class="form-control" name="password" id="password">
                         </div>
-                          <button form="form1" type="submit" class="btn btn-default">Submit</button>
+                          <button form="form1" type="submit" class="btn btn-default" required>Submit</button>
                       </form>
                     </div>
             <script>
