fix chart not appears

--- a/views/perhitungan.html
+++ b/views/perhitungan.html
@@ -18,7 +18,7 @@
                     </div>
                         
                 </div>
-                
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
                 <script>
                 var data = {{{data}}};
                 var options = {
