--- a/views/index.html
+++ b/views/index.html
@@ -16,8 +16,8 @@
                         <span class="close">&times;</span>
                         <form id="form3" method="POST" action="/perhitungan">
                                 <label for="password">Password:</label>
-                                <input id="password" type="password" name="password" placeholder="Masukkan Password" required>
-                                <input id="submit" type="submit" />
+                                <input id="password" type="password" name="password" placeholder="Masukkan Password">
+                                <input id="submit" type="submit" autofocus />
                         </form>   
                     </div>
                 </div>
